--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
 }
 
 .container{
-    max-width: 500px;
+    max-width: 600px;
 }
 
 button, li{
@@ -67,10 +67,11 @@ h1, .price {
 
 h2{
     text-transform: uppercase;
-    font-size: 1rem;
+    font-size: 0.7rem;
     font-weight: 500;
     color: hsl(228, 12%, 48%);
     margin-bottom: 1rem;
+    letter-spacing: 0.2rem;
 }
 
 .container h1{
@@ -101,7 +102,8 @@ h2{
     background-color: hsl(158, 36%, 37%);
     color: #fff;
     font-weight: 500;
-    padding: 0.625rem 2rem;
+    font-size: 1rem;
+    padding: 1rem 2rem;
     width: 100%;
     border: none;
     border-radius: 00.625rem;
@@ -109,6 +111,19 @@ h2{
     cursor: pointer;
     transition: 0.3s;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.container .btn img{
+    margin-right: 0.5rem;
+}
+
+.container .btn:hover{
+    
+    background-color: hsl(158, 38%, 20%);;
 }
 
 p{
@@ -118,8 +133,25 @@ p{
 
 .attribution { 
     font-size: 11px; text-align: center; 
+    margin-top: 2rem;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+
+@media (min-width: 640px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
+
+    .container article:first-child img{
+        border-radius: 0.625rem 0 0 0.625rem;
+    }
+    .container article:last-child{
+        border-radius: 0 0.625rem 0.625rem 0;
+    }
 }
