--- a/index.css
+++ b/index.css
@@ -153,5 +153,10 @@ p{
     }
     .container article:last-child{
         border-radius: 0 0.625rem 0.625rem 0;
+        margin-top: 0;
+    }
+
+    picture img {
+        height: 100%;
     }
 }
